[modify] main-phone 수정 / event- phone 수정

--- a/study_code/a_project/scss/common/_variable.scss
+++ b/study_code/a_project/scss/common/_variable.scss
@@ -51,3 +51,5 @@ $view_len: 5;
 
 // #event ==============================
 $event_height: calc(30vw + 80px);
+$event_phone_width: 60vw;
+$event_phone_height: calc(60vw + 80px);
