--- a/study_code/a_project/scss/src/event/_event_pc.scss
+++ b/study_code/a_project/scss/src/event/_event_pc.scss
@@ -6,7 +6,7 @@
     margin-top: 150px;
 
     .event_total_title {
-      width: 100%; max-width: 1200px; height: 100px;
+      width: 84.375vw; max-width: 1200px; height: 100px;
       margin: auto;
       margin-bottom: 50px;
 
