--- a/study_code/a_project/css/src/event_v2.css
+++ b/study_code/a_project/css/src/event_v2.css
@@ -1,5 +1,7 @@
 /* event_v2.css */
 .title_area {
+  display: flex;
+  justify-content: space-between;
   width: 100%;
   height: 60px;
   margin: auto;
@@ -8,8 +10,7 @@
 }
 
 .title_text {
-  float: left;
-  width: 65vw;
+  width: 60vw;
   max-width: 500px;
   height: 60px;
 }
@@ -25,7 +26,7 @@
 }
 
 .sub_title {
-  width: 65vw;
+  width: 100%;
   max-width: 500px;
   height: 20px;
   font-size: 16px;
@@ -35,10 +36,11 @@
 }
 
 .title_all {
-  float: right;
-  width: 90px;
+  width: 12vw;
+  min-width: 90px;
   height: 30px;
   margin-top: 30px;
+  text-align: right;
   font-size: 16px;
   font-weight: 400;
 }
@@ -811,7 +813,7 @@ html, body {
   }
   .event_area .event_tab li {
     float: left;
-    margin: 3px 20px 20px 0;
+    margin: 3px auto 20px 0;
     padding: 0 10px;
     padding-bottom: 11px;
   }
@@ -831,8 +833,8 @@ html, body {
   }
   .tab_content .event_ing_wrap {
     display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: flex-start;
     width: 100%;
     height: auto;
   }
@@ -975,11 +977,9 @@ html, body {
     position: relative;
     width: 300px;
     height: 380px;
-    margin-right: 10vw;
+    margin-left: 2vw;
+    margin-right: 2vw;
     margin-bottom: 60px;
-  }
-  .event:nth-child(2n) {
-    margin-right: 0;
   }
   .event .event_img {
     width: 100%;
@@ -1052,7 +1052,7 @@ html, body {
     margin-top: 150px;
   }
   #eventBox .event_total_title {
-    width: 100%;
+    width: 84.375vw;
     max-width: 1200px;
     height: 100px;
     margin: auto;
