--- a/study_code/a_project/css/src/main_v2.css
+++ b/study_code/a_project/css/src/main_v2.css
@@ -1,5 +1,7 @@
 /* main_v2.css */
 .title_area {
+  display: flex;
+  justify-content: space-between;
   width: 100%;
   height: 60px;
   margin: auto;
@@ -8,8 +10,7 @@
 }
 
 .title_text {
-  float: left;
-  width: 65vw;
+  width: 60vw;
   max-width: 500px;
   height: 60px;
 }
@@ -25,7 +26,7 @@
 }
 
 .sub_title {
-  width: 65vw;
+  width: 100%;
   max-width: 500px;
   height: 20px;
   font-size: 16px;
@@ -35,10 +36,11 @@
 }
 
 .title_all {
-  float: right;
-  width: 90px;
+  width: 12vw;
+  min-width: 90px;
   height: 30px;
   margin-top: 30px;
+  text-align: right;
   font-size: 16px;
   font-weight: 400;
 }
@@ -78,11 +80,6 @@ html, body {
   height: auto;
 }
 
-@media all and (max-width: 1279px) {
-  .title_all {
-    display: none;
-  }
-}
 #headBox {
   position: fixed;
   top: 0;
@@ -922,15 +919,17 @@ html, body {
 }
 #bestBox {
   width: 100%;
+  height: auto;
+  padding: 10vw;
 }
 .best_area {
+  display: flex;
   height: 420px;
   margin: auto;
+  margin-top: 20px;
 }
 .best_area .best_item {
   float: left;
-  width: 320px;
-  height: 420px;
   margin-left: 20px;
 }
 .best_area .best_item:first-child {
@@ -942,8 +941,6 @@ html, body {
   height: 100%;
 }
 .best_area .best_item a .best_img {
-  width: 320px;
-  height: 320px;
   background-color: rgba(127, 98, 255, 0.5);
 }
 .best_area .best_item a .best_text {
@@ -954,31 +951,24 @@ html, body {
 }
 
 @media all and (max-width: 1279px) {
+  .title_all {
+    display: none;
+  }
+
   #bestBox {
     overflow: hidden;
-    width: 100%;
-    height: 480px;
-    margin-top: 20px;
-    padding: 10vw;
+    min-height: 480px;
   }
   .best_area {
-    display: flex;
     justify-content: space-between;
     flex-wrap: nowrap;
     width: auto;
-    height: auto;
-    margin: auto;
-    margin-top: 40px;
+    height: 240px;
   }
   .best_area .best_item {
     width: 140px;
     height: 240px;
-    margin-left: 20px;
-  }
-  .best_area .best_item a {
-    display: block;
-    width: 100%;
-    height: 100%;
+    margin-top: 10px;
   }
   .best_area .best_item a .best_img {
     width: 140px;
@@ -989,38 +979,23 @@ html, body {
   }
 }
 @media all and (min-width: 1280px) {
-  #bestBox {
-    width: 100%;
-    height: auto;
-    margin-top: 20px;
-    padding: 80px;
-  }
   .best_area {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: nowrap;
+    justify-content: space-around;
+    flex-wrap: wrap;
     overflow: hidden;
     width: 100%;
     height: 420px;
-    margin: auto;
   }
   .best_area .best_item {
     width: 320px;
     height: 420px;
-    margin-left: 20px;
   }
   .best_area .best_item:first-child {
     margin-left: 0;
   }
-  .best_area .best_item a {
-    display: block;
-    width: 100%;
-    height: 100%;
-  }
   .best_area .best_item a .best_img {
     width: 320px;
     height: 320px;
-    background-color: rgba(127, 98, 255, 0.5);
   }
   .best_area .best_item a .best_text {
     width: 320px;
@@ -1230,19 +1205,21 @@ html, body {
 #challengeBox {
   width: 100%;
   height: auto;
+  min-height: 400px;
   margin-top: 20px;
   padding: 10vw;
 }
 #challengeBox .challenge_area {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 100%;
-  height: 30vw;
+  height: auto;
   margin: auto;
+  margin-top: 40px;
 }
 .challenge {
-  width: 30vw;
-  height: 100%;
+  width: 38vw;
+  height: 38vw;
   background-color: #eee;
 }
 .challenge a {
@@ -1251,20 +1228,75 @@ html, body {
   height: 100%;
 }
 
+@media all and (max-width: 767px) {
+  #challengeBox {
+    width: 100%;
+    height: auto;
+    min-height: 400px;
+    margin-top: 20px;
+    padding: 10vw;
+  }
+  #challengeBox .challenge_area {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: auto;
+    height: auto;
+    margin: auto;
+    margin-top: 40px;
+  }
+  .challenge {
+    width: 70vw;
+    height: 70vw;
+    margin: auto;
+    background-color: #eee;
+  }
+  .challenge:first-child {
+    margin-bottom: 11vw;
+  }
+  .challenge a {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+}
+@media all and (min-width: 768px) and (max-width: 1279px) {
+  #challengeBox {
+    width: 100%;
+    height: auto;
+    min-height: 400px;
+    margin-top: 20px;
+    padding: 10vw;
+  }
+  #challengeBox .challenge_area {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: auto;
+    margin: auto;
+    margin-top: 40px;
+  }
+  .challenge {
+    width: 38vw;
+    height: 38vw;
+    background-color: #eee;
+  }
+  .challenge a {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+}
 #eventBox {
   width: 100%;
   height: auto;
   margin-top: 20px;
-  padding: 80px;
+  padding: 10vw;
 }
 #eventBox .event_area {
   display: flex;
-  justify-content: space-between;
   overflow: hidden;
   margin: auto;
-}
-.event {
-  margin-left: 20px;
 }
 .event a {
   display: block;
@@ -1285,8 +1317,34 @@ html, body {
   height: 35px;
 }
 
-@media all and (max-width: 1279px) {
+@media all and (max-width: 767px) {
   #eventBox .event_area {
+    flex-direction: column;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
+    width: 100%;
+    height: calc((60vw + 80px) * 2 + 6vw);
+  }
+  .event {
+    width: 60vw;
+    height: calc(60vw + 80px);
+    margin: auto;
+    margin-top: 6vw;
+  }
+  .event a .event_img {
+    width: 60vw;
+    height: 60vw;
+  }
+  .event a .event_title {
+    width: 60vw;
+  }
+  .event:nth-child(1) {
+    margin-top: 0;
+  }
+}
+@media all and (min-width: 768px) and (max-width: 1279px) {
+  #eventBox .event_area {
+    justify-content: space-around;
     flex-wrap: wrap;
     width: 100%;
     height: calc((30vw + 80px) * 2 + 5.2vw);
@@ -1294,6 +1352,7 @@ html, body {
   .event {
     width: 30vw;
     height: calc(30vw + 80px);
+    margin-left: 20px;
     margin-top: 5.2vw;
   }
   .event a .event_img {
@@ -1315,13 +1374,15 @@ html, body {
 }
 @media all and (min-width: 1280px) {
   #eventBox .event_area {
-    flex-wrap: nowrap;
-    width: 100%;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: auto;
     height: 420px;
   }
   .event {
     width: 320px;
     height: 100%;
+    margin-left: 20px;
   }
   .event a .event_img {
     width: 320px;
@@ -1359,71 +1420,23 @@ html, body {
   margin: auto;
   margin-top: 50px;
 }
-.awards_btn > div {
-  position: absolute;
-  z-index: 1;
-  bottom: 50%;
-  width: 70px;
-  height: 70px;
-}
-.awards_btn .awards_after_btn {
-  right: 20px;
-}
-.awards_btn .awards_after_btn button {
-  display: block;
-  width: 100%;
-  height: 100%;
-  background-image: url(../../img/forward_orange.png);
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: contain;
-}
-.awards_btn .awards_after_btn button > span {
-  display: block;
-  position: absolute;
-  z-index: -1;
-  clip: rect(0 0 0 0);
-  width: 0;
-  height: 0;
-  overflow: hidden;
-}
-.awards_btn .awards_before_btn {
-  left: 20px;
-}
-.awards_btn .awards_before_btn button {
-  display: block;
-  width: 100%;
-  height: 100%;
-  background-image: url(../../img/back_orange.png);
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: contain;
-}
-.awards_btn .awards_before_btn button > span {
-  display: block;
-  position: absolute;
-  z-index: -1;
-  clip: rect(0 0 0 0);
-  width: 0;
-  height: 0;
-  overflow: hidden;
-}
-
 .awards_main {
   display: flex;
   justify-content: space-between;
 }
 .awards_main .awards {
-  margin: 0 20px;
   background-color: #eee;
 }
 
 @media all and (max-width: 1279px) {
   #awardsBox {
-    height: calc(20vw + 300px);
+    height: calc(30vw + 300px);
   }
   .awards_area {
     height: auto;
+  }
+  .awards_area .awards_btn {
+    display: none;
   }
   .awards_area .awards_btn > div {
     margin-bottom: -35px;
@@ -1432,13 +1445,14 @@ html, body {
     display: none;
   }
   .awards_main {
-    width: 105vw;
+    width: 130vw;
     height: auto;
+    margin-left: -15vw;
     margin-bottom: 40px;
   }
   .awards_main .awards {
-    width: 20vw;
-    height: 20vw;
+    width: 30vw;
+    height: 30vw;
   }
   .awards_main .awards:nth-child(1) {
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../../img/test.png);
@@ -1481,6 +1495,56 @@ html, body {
   .awards_area {
     height: 300px;
   }
+  .awards_btn > div {
+    position: absolute;
+    z-index: 1;
+    bottom: 50%;
+    width: 70px;
+    height: 70px;
+  }
+  .awards_btn .awards_after_btn {
+    right: 20px;
+  }
+  .awards_btn .awards_after_btn button {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-image: url(../../img/forward_orange.png);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: contain;
+  }
+  .awards_btn .awards_after_btn button > span {
+    display: block;
+    position: absolute;
+    z-index: -1;
+    clip: rect(0 0 0 0);
+    width: 0;
+    height: 0;
+    overflow: hidden;
+  }
+  .awards_btn .awards_before_btn {
+    left: 20px;
+  }
+  .awards_btn .awards_before_btn button {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-image: url(../../img/back_orange.png);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: contain;
+  }
+  .awards_btn .awards_before_btn button > span {
+    display: block;
+    position: absolute;
+    z-index: -1;
+    clip: rect(0 0 0 0);
+    width: 0;
+    height: 0;
+    overflow: hidden;
+  }
+
   .awards_indicator {
     display: flex;
     justify-content: space-between;
@@ -1522,6 +1586,7 @@ html, body {
   .awards_main .awards {
     width: 220px;
     height: 220px;
+    margin: 0 20px;
   }
   .awards_main .awards:nth-child(1) {
     width: 160px;
