--- a/study_code/a_project/scss/src/event/_event_tablet.scss
+++ b/study_code/a_project/scss/src/event/_event_tablet.scss
@@ -55,9 +55,9 @@
           @at-root .event {
             position: relative;
             width: 300px; height: 380px;
-            margin-right: 10vw;
+            margin-left: 2vw; margin-right: 2vw;
             margin-bottom: 60px;
-            &:nth-child(2n) { margin-right: 0;}
+            // &:nth-child(2n) { margin-right: 0;}
 
             .event_img {
               width: 100%; height: 300px;
