--- a/study_code/a_project/scss/src/main/_main_awards_pc.scss
+++ b/study_code/a_project/scss/src/main/_main_awards_pc.scss
@@ -8,6 +8,32 @@
     @at-root .awards_area {
       height: 300px;
       
+      @at-root .awards_btn {
+        > div {
+          position: absolute; z-index: 1;
+          bottom: 50%;
+          width: 70px; height: 70px;
+        }
+        .awards_after_btn {
+          right: 20px;
+    
+          button {
+            @include full;
+            @include img('forward_orange.png');
+          }
+        } // .awards_after_btn
+  
+        .awards_before_btn {
+          left: 20px;
+  
+          button {
+            @include full;
+            @include img('back_orange.png');
+          }
+        }
+  
+      } // .awards_btn
+
       @at-root .awards_indicator {
         display: flex; justify-content: space-between;
         position: absolute;
@@ -37,6 +63,7 @@
   
         .awards {
           width: 220px; height: 220px;
+          margin: 0 20px;
           
           &:nth-child(1) { // 배경은 handhelds 따라가기
             width: 160px; height: 160px;
