--- a/study_code/a_project/scss/src/main/_main_bestBox_handhelds.scss
+++ b/study_code/a_project/scss/src/main/_main_bestBox_handhelds.scss
@@ -2,24 +2,23 @@
 
 // ~1279px ------------------------------------------------------
 @media all and (max-width: 1279px){
+
+  .title_all { display: none;}
+
   #bestBox {
     overflow: hidden;
-    width: 100%; height: 480px;
-    margin-top: 20px;
-    padding: 10vw;
+    min-height: 480px;
 
     @at-root .best_area {
-      display: flex; justify-content: space-between; flex-wrap: nowrap;
-      width: auto; height: auto;
-      margin: auto; margin-top: 40px;
+      justify-content: space-between; flex-wrap: nowrap;
+      width: auto; height: 240px;
+
 
       .best_item {
-        // float: left;
         width: 140px; height: 240px;
-        margin-left: 20px;
+        margin-top: 10px;
 
         a {
-          @include full;
           .best_img {
             width: 140px; height: 140px;
           }
