--- a/study_code/a_project/scss/src/main/_main_common.scss
+++ b/study_code/a_project/scss/src/main/_main_common.scss
@@ -2,6 +2,7 @@
 
 
 .title_area {
+  display: flex; justify-content: space-between;
   width: 100%; height: 60px;
   margin: auto;
   margin-bottom: 20px;
@@ -9,8 +10,7 @@
 }
 
 .title_text { 
-  float: left;
-  width: 65vw; max-width: 500px; height: 60px;
+  width: 60vw; max-width: 500px; height: 60px;
 }
 
 .title {
@@ -21,15 +21,15 @@
   text-align: left;
 }
 .sub_title {
-  width: 65vw; max-width: 500px; height: 20px;
+  width: 100%; max-width: 500px; height: 20px;
   font-size: 16px; font-weight: 400;
   line-height: 20px;
   text-align: left;
 }
 .title_all {
-  float: right;
-  width: 90px; height: 30px;
+  width: 12vw; min-width: 90px; height: 30px;
   margin-top: 30px;
+  text-align: right;
   font-size: 16px; font-weight: 400;
 }
 
