--- a/study_code/a_project/scss/src/main/_main_event.scss
+++ b/study_code/a_project/scss/src/main/_main_event.scss
@@ -3,15 +3,16 @@
 #eventBox {
   width: 100%; height: auto;
   margin-top: 20px;
-  padding: 80px;
+  padding: 10vw;
+  // overflow: hidden;
 
   .event_area {
-    display: flex; justify-content: space-between;
+    display: flex;
     overflow: hidden;
     margin: auto;
 
     @at-root .event {
-      margin-left: 20px;
+      // margin-left: 20px;
       a {
         @include full;
         .event_img {
