--- a/study_code/a_project/scss/src/main/_main_event_pc.scss
+++ b/study_code/a_project/scss/src/main/_main_event_pc.scss
@@ -6,11 +6,13 @@
   #eventBox {
 
     .event_area {
-      flex-wrap: nowrap;
-      width: 100%; height: 420px;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      width: auto; height: 420px;
 
       @at-root .event {
         width: 320px; height: 100%;
+        margin-left: 20px;
         a {
           .event_img {
             width: 320px; height: 350px;
